[package]
name = "N-orbital"
version = "1.0.0"
edition = "2021"
authors = ["Liam Loubris"]
description = "Linearly aproximated numerical planetary scale gravity simulation"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
nalgebra = { version = "0.32.3", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
itertools = "0.11.0"
# physical_constants = "0.5.0"
